--- a/_posts/2014-08-31-new-post.md
+++ b/_posts/2014-08-31-new-post.md
@@ -1,12 +1,11 @@
 ---
 layout: post
-title: "new post"
+title: "Framer.js 中文翻译"
 description: ""
 category: 
 tags: []
 ---
 {% include JB/setup %}
-# Framer.js 中文翻译版
 
 ## 图层
 
