--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -5,7 +5,7 @@ date: 2014-07-15
 img: submarine.png
 alt: image-alt
 project-date: April 2014
-client: Start Bootstrap
+client: 
 category: Web Development
 description: 
 
