add article about weiju

--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -1,2 +1,87 @@
+---
+layout: post
+title:  "「微聚」的糟糕设计"
+date:   2014-9-21 18:54:46
+author: David
+categories: 
+- blog
+- 设计批评
+img: weiju.png
+thumb: weiju-icon.jpg
+---
 
-知道微聚是因为一篇报道，说微聚主打「陌生人社交」，获得了千万美元级别的 A 轮融资。于是我特意
+## 写在前面
+
+知道微聚是因为一篇报道，说微聚主打「陌生人社交」，获得了千万美元级别的 A 轮融资。有些好奇为什么能获得千万美元的融资，于是我特意下载下来看看，看完之后更加不解 —— 「微聚」凭什么能获得千万美元融资？
+
+下面就从设计的角度评价一下这款应用，保证「独立」、「第三方」，但并不保证「客观」。我为什么要保证客观啊，这本就是我的主观评价。
+
+### 用色不够干净的引导页
+
+先看下引导页长什么样
+
+![引导页](../../assets/img/blog/weiju/guide.png "引导页")
+
+可以看到 `约美女唱k!吃饭！看电影!` 几个字是用了效果处理，但是在颜色对比中没有纯度更高些的颜色搭配的时候，界面往往会显得有些「脏」。这种文字效果的处理手法，在以前的平面设计中运用的比较多，也比较老土。
+
+### 令人头疼的「注册」与「第三方登录」
+
+![登录页](../../assets/img/blog/weiju/login.png "登录页")
+
+1. 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
+
+2. 注册的过程也很不友好，表现模型（这里指的是界面）和用户心里模型不一致。
+	![登录页](../../assets/img/blog/weiju/input-field.png "引导页")
+
+	* 左侧标签显示是「年龄」，但当我选择的时候，居然弹出的是年月日。微聚的设计师千万别狡辩说是为了让用户选择出生年月后自动算出年龄，年龄是年龄，出生年月是出生年月，这是两个不同的概念。你可以让用户选择出生年月再自动算出年龄，但是要诚实，写清楚，不要让用户有被欺骗的感觉。如果只是写年龄，完全可以用 Stepper 的方式，一个输入框，左右是加减符号，更简单方便。
+	* 在输入验证码的时候，弹出的依旧是普通键盘，而非数字键盘，使用非常不便。
+3. 任何一样信息几乎都是必填项，这得难道多少英雄汉啊？想到`微聚`宣称的「注册用户1000万」，如果数据真实，我真的很想知道是什么样动力让这么多用户排除困难进行注册啊？真的这么需要社交么？
+
+### 充满困惑的「首页」
+
+![首页](../../assets/img/blog/weiju/nearby.png "引导页")
+
+`微聚`的「首页」采用了 TabBar 的主导航方式。这种方式很常见，也是 iOS 人机交互指南里推荐的方式之一，优点很明显：
+
+> 在一个扁平的信息架构里，因为所有主要的种类在主页都可接入，所以用户可以直接导航到另一个页面。Music 和 Apple Store 就是一个利用扁平结构的好例子。
+
+**但是**（「但是」这个词挺可怕，比如说姑娘对你说「其实你很好，但是...」），底部的四个主导航的图标 **几乎没有区分度** ，**几乎没有！**
+
+看看「附近」和「消息」的图标，真的很难区分当前在哪个分类下，「消息」图标的「选中」和「未选中」状态难以区分，设计师干嘛去了？产品经理 Review 的时候能让这样的 toC 的产品犯这种问题？其实这个问题也很好处理，QQ 在这方面做的就不错：「消息」图标在未选中状态时里面的三个小圆就不要了，选中状态时再出现。
+
+再吐槽一下`微聚`的交互设计，你看显示人的签名时，字数过多几乎没有做判断再处理，而是让它自然显示，甚至个别字只显示了半边。
+
+说个小亮点吧，首页的顶部有「个人」和「约会」，通过手势可以切换选择。去年的 Quara 就用了这种方式，但是这种方式的功能可预见性比较低，所以我一般不太会选择这种方式。
+
+### 视觉混乱，同时不够智能的「发活动」页面
+
+![发活动](../../assets/img/blog/weiju/activities-01.png "发活动")
+
+这一页面的视觉设计很糟糕，比如说「主题」的区域，如果我不说，你能知道这块儿还能点击么？设计的功能可预见性太差，同时背景颜色和文字缺乏对比度，读起来非常费劲。
+
+输入地点的时候，真的是输入地点，连选择也不给一个。要智能一些的话，可以输入时自动联想，也可以通过地图进行选择。产品经理不需要考虑以后要统计「常出没的地点」？方便做数据分析？
+
+![发活动](../../assets/img/blog/weiju/activities-02.png "发活动")
+
+在详情这一页，作为占位符的那些字，颜色居然比详情这个 Label 还要深，怎么能让人意识到这只是个占位符，而且点击后可以输入呢？在什么范围输入呢？还说「填写的越详细会越吸引报名者」，人家都不知道在哪输入，怎么吸引嘛~~
+
+### 一点魅力也没有的「魅力榜」
+
+![魅力榜](../../assets/img/blog/weiju/affordance-01.png "魅力榜")
+
+原以为发活动页面就已经够糟糕的了，没想到还有个隐藏的深一些的「魅力榜」。
+
+1. 初看就三个榜，其实是4个榜，还有个榜被放在「魅力月榜」右侧。这个设计的问题主要在于功能可预见性太差，如果是子类比较多的话，在视觉设计上应该留出适当地位置，让用户能知道「还有更多内容在右侧」。
+2. 表示当前选中项（等级榜）的那个底部白色边的设计简直无法忍。且不说有一些设计需要放在不同图片或背景下看，部分图片或背景下显示不是很好需要微调，这个设计是几乎不适合放在任何图片和背景下，小部分图片或背景下才像个样子。整个底色用的是白色，再仔细看看这图，左上角那一条白破坏了整张图，也很别扭，同时整个页面非常紧凑，没有足够的留白让页面进行「呼吸」，难道是要表达「残缺的美」么？
+
+### 「个人页」
+
+![个人页](../../assets/img/blog/weiju/confirm.png "个人页")
+
+有一些点会经常忽视，比如说弹出对话框。设计并不仅仅是视觉，甚至连文字内容，字段，都是设计。比如这个页面，更适合用的是「取消」和「保存」。类似的小细节点很多，不一一说了。
+
+### 总结
+
+写这么多，打字比较累，回头再说。
+
+
