--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -10,7 +10,7 @@ img: weiju.png
 thumb: weiju-icon.jpg
 ---
 
-## 写在前面
+### 写在前面
 
 知道微聚是因为一篇报道，说微聚主打「陌生人社交」，获得了千万美元级别的 A 轮融资。有些好奇为什么能获得千万美元的融资，于是我特意下载下来看看，看完之后更加不解 —— 「微聚」凭什么能获得千万美元融资？
 
