convert png to PNG

--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -26,12 +26,18 @@ thumb: weiju-icon.jpg
 
 ### 令人头疼的「注册」与「第三方登录」
 
-![登录页](../../assets/img/blog/weiju/login.png "登录页")
+
+![登录页](../../assets/img/blog/weiju/login.PNG "登录页")
+
 
 1. 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
 
 2. 注册的过程也很不友好，表现模型（这里指的是界面）和用户心里模型不一致。
-	![登录页](../../assets/img/blog/weiju/input-field.png "引导页")
+
+
+	
+![登录页](../../assets/img/blog/weiju/input-field.PNG "引导页")
+
 
 	* 左侧标签显示是「年龄」，但当我选择的时候，居然弹出的是年月日。微聚的设计师千万别狡辩说是为了让用户选择出生年月后自动算出年龄，年龄是年龄，出生年月是出生年月，这是两个不同的概念。你可以让用户选择出生年月再自动算出年龄，但是要诚实，写清楚，不要让用户有被欺骗的感觉。如果只是写年龄，完全可以用 Stepper 的方式，一个输入框，左右是加减符号，更简单方便。
 	* 在输入验证码的时候，弹出的依旧是普通键盘，而非数字键盘，使用非常不便。
@@ -39,7 +45,9 @@ thumb: weiju-icon.jpg
 
 ### 充满困惑的「首页」
 
-![首页](../../assets/img/blog/weiju/nearby.png "引导页")
+
+![首页](../../assets/img/blog/weiju/nearby.PNG "引导页")
+
 
 `微聚`的「首页」采用了 TabBar 的主导航方式。这种方式很常见，也是 iOS 人机交互指南里推荐的方式之一，优点很明显：
 
@@ -55,19 +63,25 @@ thumb: weiju-icon.jpg
 
 ### 视觉混乱，同时不够智能的「发活动」页面
 
-![发活动](../../assets/img/blog/weiju/activities-01.png "发活动")
+
+![发活动](../../assets/img/blog/weiju/activities-01.PNG "发活动")
+
 
 这一页面的视觉设计很糟糕，比如说「主题」的区域，如果我不说，你能知道这块儿还能点击么？设计的功能可预见性太差，同时背景颜色和文字缺乏对比度，读起来非常费劲。
 
 输入地点的时候，真的是输入地点，连选择也不给一个。要智能一些的话，可以输入时自动联想，也可以通过地图进行选择。产品经理不需要考虑以后要统计「常出没的地点」？方便做数据分析？
 
-![发活动](../../assets/img/blog/weiju/activities-02.png "发活动")
+
+![发活动](../../assets/img/blog/weiju/activities-02.PNG "发活动")
+
 
 在详情这一页，作为占位符的那些字，颜色居然比详情这个 Label 还要深，怎么能让人意识到这只是个占位符，而且点击后可以输入呢？在什么范围输入呢？还说「填写的越详细会越吸引报名者」，人家都不知道在哪输入，怎么吸引嘛~~
 
 ### 一点魅力也没有的「魅力榜」
 
-![魅力榜](../../assets/img/blog/weiju/affordance-01.png "魅力榜")
+
+![魅力榜](../../assets/img/blog/weiju/affordance-01.PNG "魅力榜")
+
 
 原以为发活动页面就已经够糟糕的了，没想到还有个隐藏的深一些的「魅力榜」。
 
@@ -76,7 +90,9 @@ thumb: weiju-icon.jpg
 
 ### 「个人页」
 
-![个人页](../../assets/img/blog/weiju/confirm.png "个人页")
+
+![个人页](../../assets/img/blog/weiju/confirm.PNG "个人页")
+
 
 有一些点会经常忽视，比如说弹出对话框。设计并不仅仅是视觉，甚至连文字内容，字段，都是设计。比如这个页面，更适合用的是「取消」和「保存」。类似的小细节点很多，不一一说了。
 
