add more to content

--- a/_posts/blog/2014-09-21-Framerjs-中文翻译.markdown
+++ b/_posts/blog/2014-09-21-Framerjs-中文翻译.markdown
@@ -22,7 +22,7 @@ thumb: framer-icon-02.png
 
 ## 继承
 
-图层可以被其他图层包含，我们把这种图层叫 `子图层`。这个图层的父类被称为 `父图层`。图层继承他们的父图层，举个例子，如果你设置一个图层的透明度到0.5，所有的子图层都会拥有一个0.5的透明度。
+图层可以被其他图层包含，我们把这种图层叫 `子图层`。这个图层的父类被称为 `父图层`。图层继承他们的父图层，举个例子，如果你设置一个图层的透明度到0.5，所有的子图层都会拥有一个0.5的透明度。<!--more-->
 
 一个图层的坐标是基于它的父图层的。如果 x 和 y 都是0，一个图层将会位于它的父图层的左上角。如果你需要的话，你可以操控图层的继承。
 
