--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -14,7 +14,7 @@ thumb: weiju-icon.jpg
 
 知道微聚是因为一篇报道，说微聚主打「陌生人社交」，获得了千万美元级别的 A 轮融资。有些好奇为什么能获得千万美元的融资，于是我特意下载下来看看，看完之后更加不解 —— 「微聚」凭什么能获得千万美元融资？
 
-下面就从设计的角度评价一下这款应用，保证「独立」、「第三方」，但并不保证「客观」。我为什么要保证客观啊，这本就是我的主观评价。
+下面就从设计的角度评价一下这款应用，保证「独立」、「第三方」，但并不保证「客观」。我为什么要保证客观啊，这本就是我的主观评价。<!--more-->
 
 ### 用色不够干净的引导页
 
