--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -20,14 +20,14 @@ thumb: weiju-icon.jpg
 
 先看下引导页长什么样
 
-![引导页](../../assets/img/blog/weiju/guide.png "引导页")
+![引导页](/assets/img/blog/weiju/guide.png "引导页")
 
 可以看到 `约美女唱k!吃饭！看电影!` 几个字是用了效果处理，但是在颜色对比中没有纯度更高些的颜色搭配的时候，界面往往会显得有些「脏」。这种文字效果的处理手法，在以前的平面设计中运用的比较多，也比较老土。
 
 ### 令人头疼的「注册」与「第三方登录」
 
 
-![登录页](../../assets/img/blog/weiju/login.PNG "登录页")
+![登录页](/assets/img/blog/weiju/login.PNG "登录页")
 
 
 1. 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
@@ -36,7 +36,7 @@ thumb: weiju-icon.jpg
 
 
 	
-![登录页](../../assets/img/blog/weiju/input-field.PNG "引导页")
+![登录页](/assets/img/blog/weiju/input-field.PNG "引导页")
 
 
 	* 左侧标签显示是「年龄」，但当我选择的时候，居然弹出的是年月日。微聚的设计师千万别狡辩说是为了让用户选择出生年月后自动算出年龄，年龄是年龄，出生年月是出生年月，这是两个不同的概念。你可以让用户选择出生年月再自动算出年龄，但是要诚实，写清楚，不要让用户有被欺骗的感觉。如果只是写年龄，完全可以用 Stepper 的方式，一个输入框，左右是加减符号，更简单方便。
@@ -46,7 +46,7 @@ thumb: weiju-icon.jpg
 ### 充满困惑的「首页」
 
 
-![首页](../../assets/img/blog/weiju/nearby.PNG "引导页")
+![首页](/assets/img/blog/weiju/nearby.PNG "引导页")
 
 
 `微聚`的「首页」采用了 TabBar 的主导航方式。这种方式很常见，也是 iOS 人机交互指南里推荐的方式之一，优点很明显：
@@ -64,7 +64,7 @@ thumb: weiju-icon.jpg
 ### 视觉混乱，同时不够智能的「发活动」页面
 
 
-![发活动](../../assets/img/blog/weiju/activities-01.PNG "发活动")
+![发活动](/assets/img/blog/weiju/activities-01.PNG "发活动")
 
 
 这一页面的视觉设计很糟糕，比如说「主题」的区域，如果我不说，你能知道这块儿还能点击么？设计的功能可预见性太差，同时背景颜色和文字缺乏对比度，读起来非常费劲。
@@ -80,7 +80,7 @@ thumb: weiju-icon.jpg
 ### 一点魅力也没有的「魅力榜」
 
 
-![魅力榜](../../assets/img/blog/weiju/affordance-01.PNG "魅力榜")
+![魅力榜](/assets/img/blog/weiju/affordance-01.PNG "魅力榜")
 
 
 原以为发活动页面就已经够糟糕的了，没想到还有个隐藏的深一些的「魅力榜」。
@@ -91,7 +91,7 @@ thumb: weiju-icon.jpg
 ### 「个人页」
 
 
-![个人页](../../assets/img/blog/weiju/confirm.PNG "个人页")
+![个人页](/assets/img/blog/weiju/confirm.PNG "个人页")
 
 
 有一些点会经常忽视，比如说弹出对话框。设计并不仅仅是视觉，甚至连文字内容，字段，都是设计。比如这个页面，更适合用的是「取消」和「保存」。类似的小细节点很多，不一一说了。
