fixed blog detail page img path

--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -72,7 +72,7 @@ thumb: weiju-icon.jpg
 输入地点的时候，真的是输入地点，连选择也不给一个。要智能一些的话，可以输入时自动联想，也可以通过地图进行选择。产品经理不需要考虑以后要统计「常出没的地点」？方便做数据分析？
 
 
-![发活动](../../assets/img/blog/weiju/activities-02.PNG "发活动")
+![发活动](/assets/img/blog/weiju/activities-02.PNG "发活动")
 
 
 在详情这一页，作为占位符的那些字，颜色居然比详情这个 Label 还要深，怎么能让人意识到这只是个占位符，而且点击后可以输入呢？在什么范围输入呢？还说「填写的越详细会越吸引报名者」，人家都不知道在哪输入，怎么吸引嘛~~
