convert ol to ul

--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -30,18 +30,16 @@ thumb: weiju-icon.jpg
 ![登录页](/assets/img/blog/weiju/login.PNG "登录页")
 
 
-1. 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
+  * 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
 
-2. 注册的过程也很不友好，表现模型（这里指的是界面）和用户心里模型不一致。
-
-
+  * 注册的过程也很不友好，表现模型（这里指的是界面）和用户心里模型不一致。
 	
 ![登录页](/assets/img/blog/weiju/input-field.PNG "引导页")
 
 
-	* 左侧标签显示是「年龄」，但当我选择的时候，居然弹出的是年月日。微聚的设计师千万别狡辩说是为了让用户选择出生年月后自动算出年龄，年龄是年龄，出生年月是出生年月，这是两个不同的概念。你可以让用户选择出生年月再自动算出年龄，但是要诚实，写清楚，不要让用户有被欺骗的感觉。如果只是写年龄，完全可以用 Stepper 的方式，一个输入框，左右是加减符号，更简单方便。
-	* 在输入验证码的时候，弹出的依旧是普通键盘，而非数字键盘，使用非常不便。
-3. 任何一样信息几乎都是必填项，这得难道多少英雄汉啊？想到`微聚`宣称的「注册用户1000万」，如果数据真实，我真的很想知道是什么样动力让这么多用户排除困难进行注册啊？真的这么需要社交么？
+  * 左侧标签显示是「年龄」，但当我选择的时候，居然弹出的是年月日。微聚的设计师千万别狡辩说是为了让用户选择出生年月后自动算出年龄，年龄是年龄，出生年月是出生年月，这是两个不同的概念。你可以让用户选择出生年月再自动算出年龄，但是要诚实，写清楚，不要让用户有被欺骗的感觉。如果只是写年龄，完全可以用 Stepper 的方式，一个输入框，左右是加减符号，更简单方便。
+  * 在输入验证码的时候，弹出的依旧是普通键盘，而非数字键盘，使用非常不便。
+  * 任何一样信息几乎都是必填项，这得难道多少英雄汉啊？想到`微聚`宣称的「注册用户1000万」，如果数据真实，我真的很想知道是什么样动力让这么多用户排除困难进行注册啊？真的这么需要社交么？
 
 ### 充满困惑的「首页」
 
@@ -85,8 +83,8 @@ thumb: weiju-icon.jpg
 
 原以为发活动页面就已经够糟糕的了，没想到还有个隐藏的深一些的「魅力榜」。
 
-1. 初看就三个榜，其实是4个榜，还有个榜被放在「魅力月榜」右侧。这个设计的问题主要在于功能可预见性太差，如果是子类比较多的话，在视觉设计上应该留出适当地位置，让用户能知道「还有更多内容在右侧」。
-2. 表示当前选中项（等级榜）的那个底部白色边的设计简直无法忍。且不说有一些设计需要放在不同图片或背景下看，部分图片或背景下显示不是很好需要微调，这个设计是几乎不适合放在任何图片和背景下，小部分图片或背景下才像个样子。整个底色用的是白色，再仔细看看这图，左上角那一条白破坏了整张图，也很别扭，同时整个页面非常紧凑，没有足够的留白让页面进行「呼吸」，难道是要表达「残缺的美」么？
+  * 初看就三个榜，其实是4个榜，还有个榜被放在「魅力月榜」右侧。这个设计的问题主要在于功能可预见性太差，如果是子类比较多的话，在视觉设计上应该留出适当地位置，让用户能知道「还有更多内容在右侧」。
+  * 表示当前选中项（等级榜）的那个底部白色边的设计简直无法忍。且不说有一些设计需要放在不同图片或背景下看，部分图片或背景下显示不是很好需要微调，这个设计是几乎不适合放在任何图片和背景下，小部分图片或背景下才像个样子。整个底色用的是白色，再仔细看看这图，左上角那一条白破坏了整张图，也很别扭，同时整个页面非常紧凑，没有足够的留白让页面进行「呼吸」，难道是要表达「残缺的美」么？
 
 ### 「个人页」
 
