--- a/_posts/blog/2014-09-21-WeiJu.markdown
+++ b/_posts/blog/2014-09-21-WeiJu.markdown
@@ -32,7 +32,7 @@ thumb: weiju-icon.jpg
 
   * 运用「微信」「微博」等进行登录，可以省去用户的很多麻烦，节约时间，降低使用门槛。但是 `微聚` 的登录让我再也不想用第三方进行登录了。不是因为`微聚`做得有好，而是你本想着用 QQ 啊微博啊登录省点麻烦，但你会发现用第三方登录的结果是一样的，还是需要输入几乎所有的信息。更为牛B 的是，`微聚`的「注册页」和「第三方登录页」是 **一模一样** 的。
 
-  * 注册的过程也很不友好，表现模型（这里指的是界面）和用户心里模型不一致。
+  * 注册的过程也很不友好，表现模型（这里指的是界面）和用户心理模型不一致。
 	
 ![登录页](/assets/img/blog/weiju/input-field.PNG "引导页")
 
@@ -57,7 +57,7 @@ thumb: weiju-icon.jpg
 
 再吐槽一下`微聚`的交互设计，你看显示人的签名时，字数过多几乎没有做判断再处理，而是让它自然显示，甚至个别字只显示了半边。
 
-说个小亮点吧，首页的顶部有「个人」和「约会」，通过手势可以切换选择。去年的 Quara 就用了这种方式，但是这种方式的功能可预见性比较低，所以我一般不太会选择这种方式。
+说个小亮点吧，首页的顶部有「个人」和「约会」，通过手势可以切换选择。Quora 客户端去年的一个版本用过这种方式，但是这种方式的功能可预见性比较低，所以我一般不太会选择这种方式。
 
 ### 视觉混乱，同时不够智能的「发活动」页面
 
@@ -96,6 +96,6 @@ thumb: weiju-icon.jpg
 
 ### 总结
 
-写这么多，打字比较累，回头再说。
+设计并不是找几个美工做几张图而已，设计的面很广，甚至「文字内容」都是需要设计的。
 
 
