--- a/_posts/blog/2015-02-07-about-html5.markdown
+++ b/_posts/blog/2015-02-07-about-html5.markdown
@@ -11,6 +11,7 @@ thumb: html5-small.jpg
 ---
 
 H5 是国内对HTML5 的简称，其实我们每天都在接触它，它无处不在。从「围住神经猫」，「击打企鹅」，「在房祖名中找到张默」这些红极一时的火爆游戏，到现在微信朋友圈推送广告时宝马、VIVO 的广告，支付宝十年账单等等，背后都是 HTML5 技术。
+<!--more-->
 
 但是很多时候大家对 H5 认识都只是停留在「页面」这个层次上，甚至还会有一些误解，下面就是关于 HTML5 的一些常见的误解：
 
